--- a/public/scss/base/_media.scss
+++ b/public/scss/base/_media.scss
@@ -58,13 +58,22 @@ Media Queries
   }
 }
 
-@media only screen and (min-width: 725px) {
+@media only screen and (min-width: 811px) and (max-width: 816px) {
+  .nav {
+    height: 16vh;
+  } 
+}
+
+@media only screen and (min-width: 934px) {  // 725px`
   .card-text {
-    padding: 0 12rem;
+    padding: 0 12rem;  //is breaking on 934px to 920px size!
   }
 }
 
 @media only screen and (min-width: 934px) {
+  .card-text {
+    padding: 0 4rem;
+  }
   .title-job {
     top: 220px;
     font-size: 35px;
@@ -78,7 +87,9 @@ Media Queries
 @media only screen and (min-width: 1024px) {
 /* Large viewport sizes and up **********************************************/
 /*                            **********************************************/
-  .header {
+// TODO:   fix grid bug @1024px to 920px goes to 2 column grid layout and the cards are overlapping
+
+.header {
       padding: 13% 0;
   }
   .grid {
